--- a/May18/046.html
+++ b/May18/046.html
@@ -10,8 +10,54 @@
 
 <body>
     <script>
-        class robot
+        // class Robot {
 
+        //     constructor(name) {
+        //         this.name = name;
+        //     }
+
+        //     sayYourName() {
+        //         console.log(`삐리비리. 제 이름은 ${this.name}입니다. 주인님.`);
+        //     }
+        // }
+
+        // const bot = new Robot('smith');
+
+        // bot.name // smith
+
+
+        class Robot {
+            #password
+
+            constructor(name, pw) {
+                this.name = name;
+                this.#password = pw;
+            }
+
+
+            sayYourName() {
+                console.log(`삐리비리. 제 이름은 ${this.name}입니다. 주인님.`);
+            }
+
+            // getPassword() {
+            //     return this.#password
+            // }
+
+            // setPassword(pw, pw2) {
+            //     this.#password = pw;
+            //     this.#password2 = pw2;
+            // }
+
+            get password() {
+                return this.#password
+            }
+
+            set password(pw) {
+                this.#password = pw;
+            }
+        }
+
+        const bot = new Robot('재현', 'q1w2e3');
     </script>
 </body>
 
